--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Dinael Domingos</a>
+      Coded by <a href="https://github.com/DinaelDomingos" target="_blank">Dinael Domingos</a>
     </div>
   </footer>
 </body>
